--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,7 +4,7 @@
     "com.unity.cinemachine": "2.8.0",
     "com.unity.collab-proxy": "1.10.2",
     "com.unity.ide.rider": "1.2.1",
-    "com.unity.ide.visualstudio": "2.0.11",
+    "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.4",
     "com.unity.learn.iet-framework": "1.2.0",
     "com.unity.mathematics": "1.2.5",
@@ -13,6 +13,7 @@
     "com.unity.test-framework": "1.1.27",
     "com.unity.textmeshpro": "2.1.6",
     "com.unity.timeline": "1.2.18",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.2",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.management": "4.0.7",
     "com.unity.xr.oculus": "1.10.0",
